<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DigitalCUC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="log_num">学号</string>
    <string name="log_password">密码</string>
    <string name="log_login">登录</string>
    <string name="log_first">第一次登录需要激活</string>
    <string name="main_news">中传要闻</string>
    <string name="main_activity">活动公告</string>
    <string name="main_map">中传地图</string>
    <string name="main_lib">图书馆</string>
    <string name="main_bbs">中传论坛</string>
    <string name="main_i">个人中心</string>
    <string name="log_xiaohui">xiaohui</string>
    <string name="loadmore_btn">加载更多</string>
    <string name="no_news">没有新闻</string>
    <string name="no_more_news">没有更多新闻</string>
    <string name="load_news_failure">加载新闻失败</string>
    <string name="no_comments">没有评论</string>
    <string name="no_more_comments">没有更多评论</string>
    <string name="load_comments_failure">加载评论失败</string>
    <string name="no_notes">没有帖子</string>
    <string name="no_more_notes">没有更多帖子</string>
    <string name="load_notes_failure">加载帖子失败</string>
    <string name="loadmore_txt">加载更多</string>
    <string name="reg_phone">手机</string>
    <string name="reg_act">激活</string>
    <string name="log_nickname">昵称</string>
    <string name="log_warning">对不起，该账户不存在</string>
    <string name="news_title">中国传媒大学六十周年校庆即将到来</string>
    <string name="bbs_1">仙境中传</string>
    <string name="bbs_2">学无止境</string>
    <string name="bbs_3">吃喝玩乐</string>
    <string name="bbs_4">广院生活</string>
    <string name="fresh">刷   新</string>
    <string name="back">返   回</string>

</resources>